# sfml-pong

./: CMakeLists.txt  game.puml
src/: Entity.cpp  Entity.h  main.cpp
